[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://GameView.gd" type="Script" id=2]
[ext_resource path="res://World.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/LabeledLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/LabeledBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/HazardButtonBase.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/hazard_buttons.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
resource_local_to_scene = true
atlas = ExtResource( 7 )
region = Rect2( 0, 96, 32, 32 )

[node name="GameView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="World" parent="." instance=ExtResource( 3 )]
mouse_filter = 1

[node name="RightBar" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0

[node name="ColorRect" type="ColorRect" parent="RightBar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.92549 )

[node name="MarginContainer" type="MarginContainer" parent="RightBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="RightBar/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 475.0

[node name="PathWeight" parent="RightBar/MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 190.0
margin_bottom = 60.0

[node name="Label" parent="RightBar/MarginContainer/VBoxContainer/PathWeight" index="0"]
margin_right = 190.0
margin_bottom = 28.0
text = "Path Weight"

[node name="Output" parent="RightBar/MarginContainer/VBoxContainer/PathWeight" index="1"]
margin_top = 32.0
margin_right = 190.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.760784, 0.8, 0.827451, 1 )

[node name="Traffic" parent="RightBar/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 190.0
margin_bottom = 128.0

[node name="Label" parent="RightBar/MarginContainer/VBoxContainer/Traffic" index="0"]
margin_right = 190.0
margin_bottom = 28.0
text = "Traffic"

[node name="ProgressBar" parent="RightBar/MarginContainer/VBoxContainer/Traffic" index="1"]
margin_top = 32.0
margin_right = 190.0
margin_bottom = 64.0

[node name="WorhtIt" parent="RightBar/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 190.0
margin_bottom = 196.0

[node name="Label" parent="RightBar/MarginContainer/VBoxContainer/WorhtIt" index="0"]
margin_right = 190.0
margin_bottom = 28.0
text = "Worth It?"

[node name="ProgressBar" parent="RightBar/MarginContainer/VBoxContainer/WorhtIt" index="1"]
margin_top = 32.0
margin_right = 190.0
margin_bottom = 64.0
min_value = -50.0
max_value = 50.0
value = 0.0

[node name="Residents" parent="RightBar/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 200.0
margin_right = 190.0
margin_bottom = 264.0

[node name="Label" parent="RightBar/MarginContainer/VBoxContainer/Residents" index="0"]
margin_right = 190.0
margin_bottom = 28.0
text = "Residents"

[node name="ProgressBar" parent="RightBar/MarginContainer/VBoxContainer/Residents" index="1"]
margin_top = 32.0
margin_right = 190.0
margin_bottom = 64.0
min_value = -50.0
max_value = 50.0
value = 0.0

[node name="Budget" parent="RightBar/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 268.0
margin_right = 190.0
margin_bottom = 332.0

[node name="Label" parent="RightBar/MarginContainer/VBoxContainer/Budget" index="0"]
margin_right = 190.0
margin_bottom = 28.0
text = "Budget"

[node name="ProgressBar" parent="RightBar/MarginContainer/VBoxContainer/Budget" index="1"]
margin_top = 32.0
margin_right = 190.0
margin_bottom = 64.0
min_value = -50.0
max_value = 50.0
value = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="RightBar/MarginContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 190.0
margin_bottom = 470.0
size_flags_vertical = 3

[node name="ToolButton" type="ToolButton" parent="RightBar/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 93.0
margin_bottom = 134.0
size_flags_horizontal = 3
text = "Path"

[node name="ToolButton2" type="ToolButton" parent="RightBar/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 134.0
size_flags_horizontal = 3
text = "Tools"

[node name="ToolMenu" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0

[node name="GridContainer" type="HBoxContainer" parent="ToolMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PotHole" parent="ToolMenu/GridContainer" instance=ExtResource( 6 )]
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )

[node name="Cones" parent="ToolMenu/GridContainer" instance=ExtResource( 6 )]
margin_left = 36.0
margin_right = 68.0
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 4 )

[node name="SpeedHump" parent="ToolMenu/GridContainer" instance=ExtResource( 6 )]
margin_left = 72.0
margin_right = 104.0
texture_normal = SubResource( 9 )
texture_pressed = SubResource( 10 )

[node name="StopSign" parent="ToolMenu/GridContainer" instance=ExtResource( 6 )]
margin_left = 108.0
margin_right = 140.0
texture_normal = SubResource( 5 )
texture_pressed = SubResource( 6 )

[node name="OneWay" parent="ToolMenu/GridContainer" instance=ExtResource( 6 )]
margin_left = 144.0
margin_right = 176.0
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 8 )

[connection signal="pressed" from="RightBar/MarginContainer/VBoxContainer/HBoxContainer/ToolButton" to="." method="_on_ToolButton_pressed"]
[connection signal="pressed" from="RightBar/MarginContainer/VBoxContainer/HBoxContainer/ToolButton2" to="." method="_on_ToolButton_pressed"]

[editable path="RightBar/MarginContainer/VBoxContainer/PathWeight"]
[editable path="RightBar/MarginContainer/VBoxContainer/Traffic"]
[editable path="RightBar/MarginContainer/VBoxContainer/WorhtIt"]
[editable path="RightBar/MarginContainer/VBoxContainer/Residents"]
[editable path="RightBar/MarginContainer/VBoxContainer/Budget"]
